force-app/main/default/objects/BI_Data__c/fields/Is_Lead_Contact_Related_Record__c.field-meta.xml
<CustomField>
    <fullName>Is_Lead_Contact_Related_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Lead\Contact Related Record</label>
    <type>Checkbox</type>
</CustomField>