force-app/main/default/objects/BI_Data__c/fields/is_proactive__c.field-meta.xml
<CustomField>
    <fullName>is_proactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is proactive</label>
    <type>Checkbox</type>
</CustomField>