force-app/main/default/objects/BI_Data__c/fields/Keyword_cluster__c.field-meta.xml
<CustomField>
    <fullName>Keyword_cluster__c</fullName>
    <label>Keyword cluster</label>
    <length>255</length>
    <type>Text</type>
</CustomField>