force-app/main/default/objects/BI_Data__c/fields/last_30_days_extension_visits__c.field-meta.xml
<CustomField>
    <fullName>last_30_days_extension_visits__c</fullName>
    <label>last_30_days_extension_visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>