force-app/main/default/objects/BI_Data__c/fields/Last_Competitors_List__c.field-meta.xml
<CustomField>
    <fullName>Last_Competitors_List__c</fullName>
    <description>MIS-4887</description>
    <label>Last Competitors List</label>
    <type>DateTime</type>
</CustomField>