force-app/main/default/objects/BI_Data__c/fields/Last_Engagement_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Engagement_Date__c</fullName>
    <description>MIS-2954</description>
    <label>Last Engagement Date</label>
    <type>DateTime</type>
</CustomField>