force-app/main/default/objects/BI_Data__c/fields/last_extension_visit_date__c.field-meta.xml
<CustomField>
    <fullName>last_extension_visit_date__c</fullName>
    <label>last_extension_visit_date</label>
    <type>Date</type>
</CustomField>