force-app/main/default/objects/BI_Data__c/fields/Last_High_Usage_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Last_High_Usage_Threshold__c</fullName>
    <description>MIS-4887</description>
    <label>Last High Usage Threshold</label>
    <type>DateTime</type>
</CustomField>