force-app/main/default/objects/BI_Data__c/fields/Last_Interesting_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Interesting_Activity__c</fullName>
    <label>Last Interesting Activity</label>
    <type>TextArea</type>
</CustomField>