force-app/main/default/objects/BI_Data__c/fields/Last_Interesting_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Interesting_Date__c</fullName>
    <label>Last Interesting Date</label>
    <type>DateTime</type>
</CustomField>