force-app/main/default/objects/BI_Data__c/fields/Last_No_Touch_Pro_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_No_Touch_Pro_Purchase_Date__c</fullName>
    <description>MIS-4027</description>
    <label>Last No Touch Pro Purchase Date</label>
    <type>Date</type>
</CustomField>