force-app/main/default/objects/BI_Data__c/fields/Last_ppc_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_ppc_Campaign_Name__c</fullName>
    <description>MIS-7884</description>
    <label>Last ppc Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>