force-app/main/default/objects/BI_Data__c/fields/last_ppc_timestamp__c.field-meta.xml
<CustomField>
    <fullName>last_ppc_timestamp__c</fullName>
    <description>MIS-7655</description>
    <label>last ppc timestamp</label>
    <length>50</length>
    <type>Text</type>
</CustomField>