force-app/main/default/objects/BI_Data__c/fields/Last_Pro_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Pro_End_Date__c</fullName>
    <description>MIS-4027</description>
    <label>Last Pro End Date</label>
    <type>Date</type>
</CustomField>