force-app/main/default/objects/BI_Data__c/fields/Last_Pro_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Pro_Start_Date__c</fullName>
    <description>MIS-4027</description>
    <label>Last Pro Start Date</label>
    <type>Date</type>
</CustomField>