force-app/main/default/objects/BI_Data__c/fields/Last_Pro_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Pro_Visit_Date__c</fullName>
    <label>Last Pro Visit Date</label>
    <type>DateTime</type>
</CustomField>