force-app/main/default/objects/BI_Data__c/fields/Last_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Visit_Date__c</fullName>
    <description>MIS-2474</description>
    <label>Last Visit Date</label>
    <type>DateTime</type>
</CustomField>