force-app/main/default/objects/BI_Data__c/fields/MQL2__c.field-meta.xml
<CustomField>
    <fullName>MQL2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MQL2</label>
    <type>Checkbox</type>
</CustomField>