force-app/main/default/objects/BI_Data__c/fields/MQL2_Date__c.field-meta.xml
<CustomField>
    <fullName>MQL2_Date__c</fullName>
    <label>MQL2 Date</label>
    <type>DateTime</type>
</CustomField>