force-app/main/default/objects/BI_Data__c/fields/MQL2Formula__c.field-meta.xml
<CustomField>
    <fullName>MQL2Formula__c</fullName>
    <formula>If (sw_MQL_Label2__c=&quot;A1&quot; || 
sw_MQL_Label2__c=&quot;A2&quot; || 
sw_MQL_Label2__c=&quot;A3&quot; || 
sw_MQL_Label2__c=&quot;B1&quot;||
 sw_MQL_Label2__c=&quot;B2&quot; ||
 sw_MQL_Label2__c=&quot;C1&quot;, True,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MQL2Formula</label>
    <type>Checkbox</type>
</CustomField>