force-app/main/default/objects/BI_Data__c/fields/mrkt_abandoned_package_page_date__c.field-meta.xml
<CustomField>
    <fullName>mrkt_abandoned_package_page_date__c</fullName>
    <label>mrkt abandoned package page date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>