force-app/main/default/objects/BI_Data__c/fields/Mrkt_CC_Wall_Bounce__c.field-meta.xml
<CustomField>
    <fullName>Mrkt_CC_Wall_Bounce__c</fullName>
    <label>CC Wall Bounce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>