force-app/main/default/objects/BI_Data__c/fields/mrkt_date_range_hook__c.field-meta.xml
<CustomField>
    <fullName>mrkt_date_range_hook__c</fullName>
    <description>MIS-7789</description>
    <label>mrkt date range hook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>