force-app/main/default/objects/BI_Data__c/fields/Mrkt_Days_Reached_Query_Limit__c.field-meta.xml
<CustomField>
    <fullName>Mrkt_Days_Reached_Query_Limit__c</fullName>
    <description>MIS-5713</description>
    <label>Mrkt Days Reached Query Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>