force-app/main/default/objects/BI_Data__c/fields/mrkt_deleted_from_secure__c.field-meta.xml
<CustomField>
    <fullName>mrkt_deleted_from_secure__c</fullName>
    <description>MIS-7701</description>
    <label>mrkt deleted from secure</label>
    <length>100</length>
    <type>Text</type>
</CustomField>