force-app/main/default/objects/BI_Data__c/fields/Mrkt_generate_api_button__c.field-meta.xml
<CustomField>
    <fullName>Mrkt_generate_api_button__c</fullName>
    <description>MIS-7300</description>
    <label>Mrkt generate api button</label>
    <length>255</length>
    <type>Text</type>
</CustomField>