force-app/main/default/objects/BI_Data__c/fields/mrkt_high_usage_date__c.field-meta.xml
<CustomField>
    <fullName>mrkt_high_usage_date__c</fullName>
    <label>mrkt high usage date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>