force-app/main/default/objects/BI_Data__c/fields/mrkt_homepage_competitors__c.field-meta.xml
<CustomField>
    <fullName>mrkt_homepage_competitors__c</fullName>
    <label>mrkt homepage competitors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>