force-app/main/default/objects/BI_Data__c/fields/Mrkt_Hook_Without_CU__c.field-meta.xml
<CustomField>
    <fullName>Mrkt_Hook_Without_CU__c</fullName>
    <description>MIS-5713</description>
    <label>Mrkt Hook Without CU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>