force-app/main/default/objects/BI_Data__c/fields/Mrkt_Industries_Searched__c.field-meta.xml
<CustomField>
    <fullName>Mrkt_Industries_Searched__c</fullName>
    <label>Mrkt Industries Searched</label>
    <length>255</length>
    <type>Text</type>
</CustomField>