force-app/main/default/objects/BI_Data__c/fields/Mrkt_keyword_gap__c.field-meta.xml
<CustomField>
    <fullName>Mrkt_keyword_gap__c</fullName>
    <description>MIS-7300</description>
    <label>Mrkt keyword gap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>