force-app/main/default/objects/BI_Data__c/fields/mrkt_landed_on_cc_wall__c.field-meta.xml
<CustomField>
    <fullName>mrkt_landed_on_cc_wall__c</fullName>
    <description>MIS-7701</description>
    <label>mrkt landed on cc wall</label>
    <length>100</length>
    <type>Text</type>
</CustomField>