force-app/main/default/objects/BI_Data__c/fields/Mrkt_Last_3_Compare_Websites__c.field-meta.xml
<CustomField>
    <fullName>Mrkt_Last_3_Compare_Websites__c</fullName>
    <description>MIS-5713</description>
    <label>Mrkt Last 3 Compare Websites</label>
    <length>255</length>
    <type>Text</type>
</CustomField>