force-app/main/default/objects/BI_Data__c/fields/Mrkt_Png_Section_And_Domain__c.field-meta.xml
<CustomField>
    <fullName>Mrkt_Png_Section_And_Domain__c</fullName>
    <description>MIS-6013</description>
    <label>Mrkt Png Section And Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>