force-app/main/default/objects/BI_Data__c/fields/Mrkt_Premium_Features_Dates__c.field-meta.xml
<CustomField>
    <fullName>Mrkt_Premium_Features_Dates__c</fullName>
    <description>MIS-5713</description>
    <label>Mrkt Premium Features Dates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>