force-app/main/default/objects/BI_Data__c/fields/Mrkt_Pro_Hook_Clicked_Dates__c.field-meta.xml
<CustomField>
    <fullName>Mrkt_Pro_Hook_Clicked_Dates__c</fullName>
    <description>MIS-5713</description>
    <label>Mrkt Pro Hook Clicked Dates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>