force-app/main/default/objects/BI_Data__c/fields/mrkt_SI_advanced_search_filtering__c.field-meta.xml
<CustomField>
    <fullName>mrkt_SI_advanced_search_filtering__c</fullName>
    <description>MIS-7789</description>
    <label>mrkt SI advanced search filtering</label>
    <length>255</length>
    <type>Text</type>
</CustomField>