force-app/main/default/objects/BI_Data__c/fields/mrkt_SI_company_analysis_visit__c.field-meta.xml
<CustomField>
    <fullName>mrkt_SI_company_analysis_visit__c</fullName>
    <description>MIS-7789</description>
    <label>mrkt SI company analysis visit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>