force-app/main/default/objects/BI_Data__c/fields/mrkt_SI_saved_search__c.field-meta.xml
<CustomField>
    <fullName>mrkt_SI_saved_search__c</fullName>
    <description>MIS-7789</description>
    <label>mrkt SI saved search</label>
    <length>255</length>
    <type>Text</type>
</CustomField>