force-app/main/default/objects/BI_Data__c/fields/Mrkt_si_signals__c.field-meta.xml
<CustomField>
    <fullName>Mrkt_si_signals__c</fullName>
    <description>MIS-7300</description>
    <label>Mrkt si signals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>