force-app/main/default/objects/BI_Data__c/fields/Mrkt_solution_switcher_new__c.field-meta.xml
<CustomField>
    <fullName>Mrkt_solution_switcher_new__c</fullName>
    <description>MIS-7300</description>
    <label>Mrkt solution switcher new</label>
    <length>255</length>
    <type>Text</type>
</CustomField>