force-app/main/default/objects/BI_Data__c/fields/Mrkt_Talk_to_Us_Last_Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>Mrkt_Talk_to_Us_Last_Feature_Name__c</fullName>
    <description>MIS-5713</description>
    <label>Mrkt Talk to Us Last Feature Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>