force-app/main/default/objects/BI_Data__c/fields/mrkt_trial_reactivation__c.field-meta.xml
<CustomField>
    <fullName>mrkt_trial_reactivation__c</fullName>
    <description>MIS-7701</description>
    <label>mrkt trial reactivation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>