force-app/main/default/objects/BI_Data__c/fields/NT_Avg_Days_Between_Login__c.field-meta.xml
<CustomField>
    <fullName>NT_Avg_Days_Between_Login__c</fullName>
    <description>MIS-5373</description>
    <label>NT Avg Days Between Login</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>