force-app/main/default/objects/BI_Data__c/fields/NT_status__c.field-meta.xml
<CustomField>
    <fullName>NT_status__c</fullName>
    <label>NT status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>