force-app/main/default/objects/BI_Data__c/fields/num_months_in_platform__c.field-meta.xml
<CustomField>
    <fullName>num_months_in_platform__c</fullName>
    <label>num_months_in_platform</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>