force-app/main/default/objects/BI_Data__c/fields/Num_of_Queries_CSA__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Queries_CSA__c</fullName>
    <description>MIS-3294</description>
    <label># of Queries (CSA)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>