force-app/main/default/objects/BI_Data__c/fields/Number_Of_Available_Seats__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Available_Seats__c</fullName>
    <label>Number Of Available Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>