force-app/main/default/objects/BI_Data__c/fields/of_Engaged_users__c.field-meta.xml
<CustomField>
    <fullName>of_Engaged_users__c</fullName>
    <description>MIS-2021</description>
    <label># of Engaged users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>