force-app/main/default/objects/BI_Data__c/fields/opportunity_health_score__c.field-meta.xml
<CustomField>
    <fullName>opportunity_health_score__c</fullName>
    <label>Opportunity Health Score Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>