force-app/main/default/objects/BI_Data__c/fields/opportunity_health_score_name__c.field-meta.xml
<CustomField>
    <fullName>opportunity_health_score_name__c</fullName>
    <label>Opportunity Health Score Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>