force-app/main/default/objects/BI_Data__c/fields/Opportunity_Score_Components__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Score_Components__c</fullName>
    <label>Opportunity Score Components</label>
    <length>255</length>
    <type>Text</type>
</CustomField>