force-app/main/default/objects/BI_Data__c/fields/Optimize_Traffic_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Optimize_Traffic_Acquisition__c</fullName>
    <description>MIS-4656</description>
    <label>Optimize Traffic Acquisition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>