force-app/main/default/objects/BI_Data__c/fields/Past_Meeting_Opp__c.field-meta.xml
<CustomField>
    <fullName>Past_Meeting_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pull from &quot;engagement_share&quot; field in BI</description>
    <inlineHelpText>Past Meetings or Opps closed lost over 3 months ago</inlineHelpText>
    <label>Past Meeting/Opp</label>
    <type>Checkbox</type>
</CustomField>