force-app/main/default/objects/BI_Data__c/fields/Pro_User_Type__c.field-meta.xml
<CustomField>
    <fullName>Pro_User_Type__c</fullName>
    <label>Pro User Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>