force-app/main/default/objects/BI_Data__c/fields/Related_Record_18_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_18_ID__c</fullName>
    <formula>IF(LEN( Related_Record_ID__c ) = 18, Related_Record_ID__c,
CASESAFEID(Related_Record_ID__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Record 18 ID</label>
    <type>Text</type>
</CustomField>