force-app/main/default/objects/BI_Data__c/fields/Related_to_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Object__c</fullName>
    <formula>CASE(
  LEFT(Related_Record_ID__c, 3),
  &apos;001&apos;, &apos;Account&apos;,
  &apos;006&apos;, &apos;Opportunity&apos;,
  &apos;003&apos;, &apos;Contact&apos;,
  &apos;a0t&apos;, &apos;Meeting&apos;,
  &apos;00Q&apos;, &apos;Lead&apos;,
  &quot;&quot;
)</formula>
    <label>Related to Object</label>
    <type>Text</type>
</CustomField>