force-app/main/default/objects/BI_Data__c/fields/relationship_score__c.field-meta.xml
<CustomField>
    <fullName>relationship_score__c</fullName>
    <label>Relationship Score Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>