force-app/main/default/objects/BI_Data__c/fields/Research_Any_Market__c.field-meta.xml
<CustomField>
    <fullName>Research_Any_Market__c</fullName>
    <description>MIS-4656</description>
    <label>Research Any Market</label>
    <length>255</length>
    <type>Text</type>
</CustomField>