force-app/main/default/objects/BI_Data__c/fields/ROE_Sub_Division__c.field-meta.xml
<CustomField>
    <fullName>ROE_Sub_Division__c</fullName>
    <label>ROE Sub Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ENT Sales - Europe</fullName>
            </value>
            <value>
                <fullName>ENT Sales - France</fullName>
            </value>
            <value>
                <fullName>ENT Sales - US</fullName>
            </value>
            <value>
                <fullName>Agencies_Big6</fullName>
            </value>
            <value>
                <fullName>Agencies__Independent</fullName>
            </value>
            <value>
                <fullName>Global Sales - Europe</fullName>
            </value>
            <value>
                <fullName>Investors_SMB</fullName>
            </value>
            <value>
                <fullName>Investors_ENT</fullName>
            </value>
            <value>
                <fullName>Global Sales - US</fullName>
            </value>
            <value>
                <fullName>Reseller - ANZ - Direct</fullName>
            </value>
            <value>
                <fullName>Reseller - ANZ-Trellian</fullName>
            </value>
            <value>
                <fullName>Reseller - Brazil</fullName>
            </value>
            <value>
                <fullName>Reseller - India-eDynamics</fullName>
            </value>
            <value>
                <fullName>Reseller - Italy-GlobalDots</fullName>
            </value>
            <value>
                <fullName>Reseller - Japan</fullName>
            </value>
            <value>
                <fullName>Reseller - SEA-Maestros</fullName>
            </value>
            <value>
                <fullName>ROW_500+</fullName>
            </value>
            <value>
                <fullName>ROW_Sales</fullName>
            </value>
            <value>
                <fullName>ROW_Russia</fullName>
            </value>
            <value>
                <fullName>SMB Sales - ROW</fullName>
            </value>
            <value>
                <fullName>ROW_EMEA</fullName>
            </value>
            <value>
                <fullName>ROW_China</fullName>
            </value>
            <value>
                <fullName>SMB Sales - US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>