force-app/main/default/objects/BI_Data__c/fields/Score_advanced__c.field-meta.xml
<CustomField>
    <fullName>Score_advanced__c</fullName>
    <description>MIS-1816 Field for BI GQL dashboard</description>
    <label>Score_advanced</label>
    <length>50</length>
    <type>Text</type>
</CustomField>