force-app/main/default/objects/BI_Data__c/fields/score_api__c.field-meta.xml
<CustomField>
    <fullName>score_api__c</fullName>
    <description>MIS-1816 Field for BI GQL dashboard</description>
    <label>score_api</label>
    <length>50</length>
    <type>Text</type>
</CustomField>