force-app/main/default/objects/BI_Data__c/fields/Secure_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Secure_Account_Id__c</fullName>
    <description>MIS-4728</description>
    <label>Secure Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>