force-app/main/default/objects/BI_Data__c/fields/Secure_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Secure_Account_Name__c</fullName>
    <description>MIS-6874</description>
    <label>Secure Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>