force-app/main/default/objects/BI_Data__c/fields/Secure_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Secure_User_ID__c</fullName>
    <description>MIS-3794</description>
    <label>Secure User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>