force-app/main/default/objects/BI_Data__c/fields/SI_Enrichment_Visits__c.field-meta.xml
<CustomField>
    <fullName>SI_Enrichment_Visits__c</fullName>
    <description>MIS-4608</description>
    <label>SI Enrichment Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>