force-app/main/default/objects/BI_Data__c/fields/Sub_Division__c.field-meta.xml
<CustomField>
    <fullName>Sub_Division__c</fullName>
    <label>Sub Division</label>
    <type>TextArea</type>
</CustomField>