force-app/main/default/objects/BI_Data__c/fields/Sub_Division_Account__c.field-meta.xml
<CustomField>
    <fullName>Sub_Division_Account__c</fullName>
    <label>Sub Division (Account)</label>
    <type>TextArea</type>
</CustomField>