force-app/main/default/objects/BI_Data__c/fields/Sub_division_by_year__c.field-meta.xml
<CustomField>
    <fullName>Sub_division_by_year__c</fullName>
    <label>Sub division by year</label>
    <type>TextArea</type>
</CustomField>