force-app/main/default/objects/BI_Data__c/fields/Sub_Division_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Sub_Division_Meeting__c</fullName>
    <label>Sub Division (Meeting)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>