force-app/main/default/objects/BI_Data__c/fields/SW_Behavioral_Score_Value__c.field-meta.xml
<CustomField>
    <fullName>SW_Behavioral_Score_Value__c</fullName>
    <label>SW Behavioral Score Value</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>