force-app/main/default/objects/BI_Data__c/fields/sw_MQL_Label2__c.field-meta.xml
<CustomField>
    <fullName>sw_MQL_Label2__c</fullName>
    <description>FIT_Label2__c +  TEXT(BHV_Label2__c)</description>
    <formula>FIT_Label2__c +text(SW_Behavioral_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>FIT_Label2__c +  TEXT(BHV_Label2__c)</inlineHelpText>
    <label>sw MQL Label2</label>
    <type>Text</type>
</CustomField>