force-app/main/default/objects/BI_Data__c/fields/Sync_BI_Data_to_SFMC__c.field-meta.xml
<CustomField>
    <fullName>Sync_BI_Data_to_SFMC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync BI Data to SFMC</label>
    <type>Checkbox</type>
</CustomField>