force-app/main/default/objects/BI_Data__c/fields/SYS_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>SYS_Health_Score__c</fullName>
    <label>SYS Health Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Good Health</fullName>
            </value>
            <value>
                <fullName>More Users Required</fullName>
            </value>
            <value>
                <fullName>Critical Engagement</fullName>
            </value>
            <value>
                <fullName>More Depth Required</fullName>
            </value>
            <value>
                <fullName>Advisory Services or Data Feed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>