force-app/main/default/objects/BI_Data__c/fields/TAM__c.field-meta.xml
<CustomField>
    <fullName>TAM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TAM</label>
    <type>Checkbox</type>
</CustomField>